Bug 906698 - nsUTF16ToUnicode is mis-converting on big-endian processor. r=smontagu CLOSED TREE